@@ -15,13 +15,19 @@ public class Card {
         this.value = value;
     }
 
+    @Override
+    public String toString() {
+        return "Card{"
+                + "suit=" + suit
+                + ", value=" + value
+                + '}';
+    }
+
     public static void main(String[] args) {
         List<Card> deck = Stream.of(Suit.values())
                 .flatMap(s -> Stream.of(Value.values())
                         .map(v -> new Card(s, v)))
-                .collect(Collectors.toList());
-        deck.stream()
-                .map(c -> c.suit + " " + c.value)
-                .forEach(System.out::println);
+                .toList();
+        deck.forEach(System.out::println);
     }
 }
